Minor refactoring + reformatted code